pbl bases de datos version 14

--- a/modificar.html
+++ b/modificar.html
@@ -24,6 +24,12 @@ session_start();
                             <input type="text" class="form-control" name="ou" placeholder="ou" required>
                             <input type="text" class="form-control" name="uid" placeholder="uid" required>
                             <div class="radio"> 
+                            <label><input type="radio" name="radio" value="ou">ou</label>
+                            </div>
+                            <div class="radio"> 
+                            <label><input type="radio" name="radio" value="uid">uid</label>
+                            </div>
+                            <div class="radio"> 
                             <label><input type="radio" name="radio" value="nombre">nombre</label>
                             </div>
                             <div class="radio">
